--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "msw": "^2.4.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-svg": "^16.1.34",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
@@ -22,10 +23,14 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
