--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-svg": "^16.1.34",
+    "uuid": "^10.0.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
